bynkc/tests/fixtures/positive/58_multi_file_commons/src/shapes/types.karn
commons shapes

type Width = Int where Positive
type Height = Int where Positive
