bynkc/tests/fixtures/negative/48_uses_name_conflict/src/a/main.karn
commons a

type Conflict = Int where Positive
